# open-core

./: .bazelignore  .bazelrc  .clang-format  .clang-tidy  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  codecov.yml  deps.bzl  generate.go  go.mod  golang.md  mkdocs.yml  pylintrc  requirements.txt  requirements_lock.txt  ros2_setup_1.bzl  ros2_setup_2.bzl  transitive_deps.bzl  version.bzl
.cursor/rules/: metrics2.mdc
.devcontainer/: Dockerfile  build.sh  devcontainer.json  pull.sh  requirements.txt  run.sh  run_dotfiles.sh  run_dotfiles_local.sh  run_local.sh
.github/: pull_request_template.md
.github/workflows/: add_go_bindings.sh  build-go-bindings.yml  build-image.yml  build-push-default-reports-build.yml  build-push-log-ingest-build.yml  build-push-wheels.yml  build-sim-image.yml  check_tags_available.sh  example-builds.yml  lint-and-codecov.yml  nightly.yml  release.yml  triggers-docs-rebuild.yml
.resim/metrics/: config.yaml  config.yml
.trunk/: .gitignore  trunk.yaml
.trunk/config/: .mypy.ini  .pylintrc
bazel/: BUILD  foo.py  openapi_client.bzl  python.bzl
bazel_registry/: BUILD  LICENSE.com_github_mvukov_rules_ros2.txt  update_open_core.py
bazel_registry/modules/hedron_compile_commands/a14ad3a64e7bf398ab48105aaa0348e032ac87f8/: MODULE.bazel  source.json
bazel_registry/modules/resim-python-client/a28eca31985d175d976b868d38c7f3adc315155b/: MODULE.bazel  source.json
bazel_registry/modules/resim-python-client/a36edc3292b713406b2aea1d42b089dfc68234a3/: MODULE.bazel  source.json
bazel_registry/modules/resim-python-client/b39d98f0e0ee9c213d5279af7f648e81e1693a92/: MODULE.bazel  source.json
bkp/: chilli_ratings_beef_chilli.csv  chilli_ratings_chile_verde.csv  chilli_ratings_veggie_chilli.csv
common/: inout.hh  inout_test.cc  random_vector_test.cc
curves/: BUILD  d_curve.cc  d_curve.hh  d_curve_test.cc  extrapolate_two_jet.cc  extrapolate_two_jet.hh  extrapolate_two_jet_test.cc  quintic_poly_coeffs.cc  quintic_poly_coeffs_test.cc  t_curve_segment.cc  t_curve_segment.hh  t_curve_segment_test.cc  two_jet.cc  two_jet.hh  two_jet_test.cc
docs/resim/: index.md
docs/resim_core/: index.md
metrics_proto/: metrics.pb.go
pkg/: BUILD  extra_requires.txt  requirements.txt  requirements_lock.txt
resim/: BUILD
resim-python-client/: BUILD  README.md  api_spec.BUILD  api_spec.bzl  openapi.yaml  openapi_client.bzl  openapi_python_client_config.yaml  requirements-dev.txt  requirements-dev_lock.txt  requirements.txt  requirements_lock.txt
resim/actor/: BUILD  actor.cc  actor.hh  actor_id.hh  actor_test.cc  actor_unit.cc  actor_unit.hh  actor_unit_test.cc  factory.cc  factory.hh  factory_test.cc  ilqr_drone.cc  ilqr_drone.hh  ilqr_drone_test.cc  location_condition_unit.cc  location_condition_unit.hh  location_condition_unit_test.cc  test_actor.cc  test_actor.hh  trajectory_actor.cc  trajectory_actor.hh  trajectory_actor_test.cc
resim/assert/: BUILD  assert.cc  assert.hh  assert_test.cc
resim/auth/: BUILD  auth_client_interface.hh  client_credentials_client.cc  client_credentials_client.hh  client_credentials_client_test.cc  device_code_client.cc  device_code_client.hh  device_code_client_test.cc
resim/converter/: BUILD  fuzz_helpers.cc  fuzz_helpers.hh  fuzz_helpers_test.cc  fuzz_helpers_test_template.hh  parser.hh  parser_test.cc  tags.hh  variant_fuzz_helpers.hh
resim/curves/: BUILD  d_curve.cc  d_curve.hh  d_curve_test.cc  d_curve_test_helpers.cc  d_curve_test_helpers.hh  extrapolate_two_jet.cc  extrapolate_two_jet.hh  extrapolate_two_jet_test.cc  quintic_poly_coeffs.cc  quintic_poly_coeffs.hh  quintic_poly_coeffs_test.cc  sample_t_curve.cc  sample_t_curve.hh  sample_t_curve_test.cc  t_curve.cc  t_curve.hh  t_curve_segment.cc  t_curve_segment.hh  t_curve_segment_test.cc  t_curve_test.cc  t_curve_test_helpers.cc  t_curve_test_helpers.hh  t_curve_test_helpers_test.cc  test_helpers.cc  test_helpers.hh  test_helpers_test.cc  two_jet.cc  two_jet.hh  two_jet_concepts.hh  two_jet_concepts_test.cc  two_jet_test.cc  two_jet_test_helpers.cc  two_jet_test_helpers.hh  two_jet_test_helpers_test.cc
resim/dynamics/: BUILD  constants.hh  controller.hh  dynamics.hh  forward_euler.hh  forward_euler_test.cc  integrator.hh  integrator_test.cc
resim/examples/: .clang-tidy  BUILD  assert_and_status.cc  auth_example.py  curves.cc  gaussian.cc  liegroups.cc  match.cc  output_parameters.cc  plotly_metrics.py  time.cc  trajectory.cc  view.cc
resim/experiences/: BUILD  actor.hh  actor_test.cc  completion_criteria.hh  dynamic_behavior.hh  experience.hh  geometry.hh  ilqr_drone.hh  location_condition.hh  storyboard.hh
resim/geometry/: BUILD  bounding_box_from_wireframe.cc  bounding_box_from_wireframe.hh  box_box_distance.cc  ecef.hh  (+31 more)
rules_resim/: BUILD.bazel  MODULE.bazel  README.md  build.bzl  cli.bzl  defs.bzl  extensions.bzl  extensions.md  rules.md  update_docs.sh  workspace_deps.bzl  wrapper.sh.tpl
rules_resim/examples/: .bazelrc  BUILD  MODULE.bazel  WORKSPACE  docker-compose.base.yml  docker-compose.yml  multicontainer_build_entrypoint.sh  received_greeting.txt  simple_build_entrypoint.sh  version.bzl  workspace_status.sh
rules_resim/private/: BUILD.bazel  api_spec.BUILD  api_spec.bzl  cli.bzl  cli_versions.json  resim_build.bzl  resim_test_suite.bzl  sources.bzl  test_suite_wrapper.sh.tpl  version_resolver.sh  wrapper.sh.tpl  wrapper_mcb.sh.tpl
rules_resim/scripts/: BUILD.bazel  generate_cli_checksums.py  requirements.txt  requirements_lock.txt
test/: BUILD  hello_world.cc
toolchain/: BUILD  cc_toolchain_config.bzl  check_compiler.hh  check_compiler_test.cc
transforms/: BUILD  cross_matrix.cc  cross_matrix.hh  cross_matrix_test.cc  frame.hh  frame_test.cc  liegroup.hh  liegroup_concepts.hh  liegroup_concepts_test.cc  liegroup_exp_diff.cc  liegroup_exp_diff.hh  liegroup_exp_diff_test.cc  liegroup_test.cc  liegroup_test_helpers.cc  liegroup_test_helpers.hh  liegroup_test_helpers_test.cc  se3.cc  se3.hh  se3_test.cc  so3.cc  so3.hh  so3_test.cc
utils/: BUILD  uuid.cc  uuid.hh  uuid_test.cc
uuid_proto/: uuid.pb.go
(+1364 files in other folders)
