module(
    name = "resim_open_core",
    version = "0.0.11",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.7.3")
bazel_dep(name = "au", version = "0.3.4")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "com_github_mvukov_rules_ros2", version = "14b75cb377784f21d709663df6c599056a512c18")
bazel_dep(name = "cpr", version = "1.10.5")
bazel_dep(name = "cxxopts", version = "3.2.1")
bazel_dep(name = "eigen", repo_name = "libeigen", version = "3.4.0")
bazel_dep(name = "fmt", version = "10.2.1")
bazel_dep(name = "foxglove_schemas", version = "0.7.1")
bazel_dep(name = "glog", repo_name = "com_github_google_glog", version = "0.7.0")
bazel_dep(name = "googletest", repo_name = "com_google_googletest", version = "1.14.0")
bazel_dep(name = "hedron_compile_commands", version = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8")
bazel_dep(name = "httplib", version = "0.15.3")
bazel_dep(name = "indicators", version = "2.3.0")
bazel_dep(name = "libuuid", version = "2.39.3")
bazel_dep(name = "mcap", version = "1.2.1")
bazel_dep(name = "nlohmann_json", version = "3.11.3")
bazel_dep(name = "platforms", version = "0.0.10")
bazel_dep(name = "protobuf", repo_name = "com_google_protobuf", version = "26.0")
bazel_dep(name = "pybind11_bazel", version = "2.12.0")
bazel_dep(name = "resim-python-client", version = "a28eca31985d175d976b868d38c7f3adc315155b")
bazel_dep(name = "ros2_common_interfaces", version = "4.2.3")
bazel_dep(name = "ros2_geometry2", version = "0.25.5")
bazel_dep(name = "ros2_rcl_interfaces", version = "1.2.1")
bazel_dep(name = "ros2_rclcpp", version = "16.0.8")
bazel_dep(name = "ros2_rcpputils", version = "2.4.1")
bazel_dep(name = "ros2_rosbag2", version = "0.15.9")
bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_oci", version = "1.7.5")
bazel_dep(name = "rules_pkg", version = "0.10.1")
bazel_dep(name = "rules_proto", version = "6.0.0")
bazel_dep(name = "rules_python", version = "0.31.0")
bazel_dep(name = "vision_msgs", version = "4.1.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")

python.toolchain(
    configure_coverage_tool = True,
    ignore_root_user_error = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")

pip.parse(
    hub_name = "resim_python_deps",
    python_version = "3.10",
    requirements_lock = "@resim_open_core//:requirements_lock.txt",
)

use_repo(pip, "resim_python_deps")

register_toolchains(
    "@resim_open_core//resim/toolchain:cc_toolchain_for_k8",
)

oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")

oci.pull(
    name = "distroless_cc",
    image = "gcr.io/distroless/cc",
    platforms = [
        "linux/amd64",
    ],
    tag = "latest-amd64",
)

# For each oci.pull call, repeat the "name" here to expose them as dependencies.
use_repo(oci, "distroless_cc")
