# Copyright 2025 ReSim, Inc.
#
# Use of this source code is governed by an MIT-style
# license that can be found in the LICENSE file or at
# https://opensource.org/licenses/MIT.

module(
    name = "rules_resim",
    version = "0.1.0",
)

bazel_dep(name = "bazel_skylib", version = "1.8.1")
bazel_dep(name = "platforms", version = "1.0.0")

resim_extension = use_extension("@rules_resim//:extensions.bzl", "resim_extension")
use_repo(resim_extension, "resim_api_spec", "resim_cli")

bazel_dep(name = "stardoc", version = "0.8.0")
