load("@rules_python//python:defs.bzl", "py_binary")
load("@script_deps//:requirements.bzl", "requirement")

py_binary(
    name = "generate_cli_checksums",
    srcs = ["generate_cli_checksums.py"],
    data = ["//private:cli_versions"],
    env = {
        "CLI_VERSIONS_JSON_PATH": "$(location //private:cli_versions)",
    },
    deps = [
        requirement("httpx"),
        requirement("tqdm"),
    ],
)
