module(
    name = "hedron_compile_commands",
    version = "a14ad3a64e7bf398ab48105aaa0348e032ac87f8",
    compatibility_level = 0,
)

p = use_extension("//:workspace_setup.bzl", "hedron_compile_commands_extension")

pt = use_extension("//:workspace_setup_transitive.bzl", "hedron_compile_commands_extension")

ptt = use_extension("//:workspace_setup_transitive_transitive.bzl", "hedron_compile_commands_extension")

pttt = use_extension("//:workspace_setup_transitive_transitive_transitive.bzl", "hedron_compile_commands_extension")
