module(
    name = "resim-python-client",
    version = "a28eca31985d175d976b868d38c7f3adc315155b",
    compatibility_level = 0,
)

bazel_dep(name = "rules_python", version = "0.31.0")

python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(
    ignore_root_user_error = True,
    python_version = "3.10",
)

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    hub_name = "resim_python_client_deps",
    python_version = "3.10",
    requirements_lock = "@resim-python-client//:requirements.txt",
)
use_repo(pip, "resim_python_client_deps")
